# conan2-hello

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.txt
src/: CMakeLists.txt  Hello.cpp  Hello.h  main.cpp
test/: CMakeLists.txt  HelloTest.cpp  main.cpp
